opam-version: "2.0"
synopsis:     "Library implementing the OpenVPN protocol and configuration format"
name:         "miragevpn"
homepage:     "https://github.com/robur-coop/miragevpn"
dev-repo:     "git+https://github.com/robur-coop/miragevpn.git"
bug-reports:  "https://github.com/robur-coop/miragevpn/issues"
doc:          "https://github.com/robur-coop/miragevpn/doc"
author:       ["robur"]
maintainer:   ["robur"]
license:      "AGPL"

build: [
  ["dune" "subst" ] {dev}
  ["dune" "build"   "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune"
  "ocaml" {>= "4.08.0"}
  "odoc" {with-doc}

  "fmt"      { >= "0.8.7" }
  "logs"     { >= "0.6.2" }
  "rresult"  { >= "0.6.0" }

  "angstrom" { >= "0.14.0" }
  "cstruct"  { >= "6.0.0" }
  "cmdliner" { >= "1.1.0" }
  "domain-name" { >= "0.2.0" }
  "fmt"
  "gmap"     { >= "0.3.0" }
  "hex"      { >= "1.4.0" }
  "ipaddr"   { >= "5.0.0" }
  "decompress" { >= "1.5.0" }
  "logs"
  "cstruct-lwt"
  "lwt" {>= "5.7.0"}
  "mirage-crypto"
  "mirage-crypto-rng" {>= "0.11.0"}
  "mirage-crypto-rng-lwt" {>= "0.11.0"}
  "ptime"
  "rresult"
  "tls" {>= "0.15.0"}
  "dns-client" {>= "7.0.0"}
  "dns-client-lwt" {>= "7.0.0"}
  "x509" {>= "0.15.0"}
  "duration"

  "tuntap" {>= "1.8.1"}

  "astring"
  "mtime"
  "randomconv"
  # mirage:
  "dns-client-mirage" {>= "7.0.0"}
  "tcpip" {>= "7.0.0"}
  "mirage-random" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}

  "crowbar" {with-test}
  "alcotest" {with-test}
  "bigstringaf" {with-test}
]

pin-depends: [
  [ "decompress.dev" "git+https://github.com/mirage/decompress.git#b405d218b0c758154d683d78499aa31053c35e5d" ]
]
