opam-version: "2.0"
synopsis:     "Library implementing the OpenVPN protocol and configuration format"
name:         "miragevpn"
homepage:     "https://github.com/robur-coop/miragevpn"
dev-repo:     "git+https://github.com/robur-coop/miragevpn.git"
bug-reports:  "https://github.com/robur-coop/miragevpn/issues"
doc:          "https://github.com/robur-coop/miragevpn/doc"
author:       ["robur"]
maintainer:   ["robur"]
license:      "BSD-2-Clause"

build: [
  ["dune" "subst" ] {dev}
  ["dune" "build"   "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {>= "2.9"}
  "ocaml" {>= "4.14.0"}
  "odoc" {with-doc}

  "fmt"      { >= "0.8.7" }
  "logs"     { >= "0.6.2" }

  "angstrom" { >= "0.14.0" }
  "domain-name" { >= "0.2.0" }
  "fmt"
  "gmap"     { >= "0.3.0" }
  "ohex"     { >= "0.2.0" }
  "ipaddr"   { >= "5.0.0" }
  "decompress" { >= "1.5.3" }
  "logs"
  "lwt" {>= "5.7.0"}
  "mirage-crypto" {>= "1.2.0"}
  "mirage-crypto-rng" {>= "1.2.0"}
  "ptime"
  "tls" {>= "1.0.0"}
  "dns-client" {>= "10.0.0"}
  "x509" {>= "1.0.0"}
  "duration"
  "randomconv" {>= "0.2.0"}
  "digestif" {>= "1.2.0"}
  "mirage-ptime" {>= "5.0.0"}
  "mirage-mtime" {>= "5.0.0"}
  # app:
  "mtime"
  "dns-client-lwt" {>= "10.0.0"}
  "tuntap" {>= "1.8.1"}
  "base64" {>= "3.0.0"}
  "hxd"
  # mirage:
  "dns-client-mirage" {>= "10.0.0"}
  "tcpip" {>= "9.0.0"}
  "mirage-sleep" {>= "4.0.0"}
  "cstruct" {>= "6.0.0"}
  "happy-eyeballs-mirage" {>= "2.0.0"}
  # tooling:
  "cmdliner" { >= "1.1.0" }
  "hxd"
  "bos"

  "crowbar" {with-test}
  "alcotest" {with-test}
  "bigstringaf" {with-test}
  "notty" {with-test}
  "bechamel" {with-test}
  "bechamel-notty" {with-test}

  # coverage
  "bisect_ppx" {dev}
]
