opam-version: "2.0"
synopsis:     "Library implementing the OpenVPN protocol and configuration format"
name:         "openvpn"
homepage:     "https://github.com/roburio/openvpn"
dev-repo:     "git+https://github.com/roburio/openvpn.git"
bug-reports:  "https://github.com/roburio/openvpn/issues"
doc:          "https://github.com/roburio/openvpn/doc"
author:       ["robur"]
maintainer:   ["robur"]
license:      "AGPL"

build: [
  ["dune" "subst" ] {pinned}
  ["dune" "build"   "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {build}
  "ocaml" {>= "4.07.0"}
  "odoc" {with-doc}

  "fmt"      { >= "0.8.6" }
  "logs"     { >= "0.6.2" }
  "rresult"  { >= "0.6.0" }

  "angstrom"
  "cstruct"  { >= "4.0.0" }
  "cmdliner"
  "domain-name" { >= "0.2.0" }
  "fmt"
  "gmap"     { >= "0.3.0" }
  "hex"      { >= "1.4.0" }
  "ipaddr"   { >= "3.1.0" }
  "logs"
  "cstruct-lwt"
  "lwt"
  "nocrypto"
  "ptime"
  "rresult"
  "tls"
  "dns-client" {>= "4.0.0"}
  "x509" {>= "0.8.0"}
  "duration"

  # mirage:
  "mirage-stack-lwt"
  "mirage-protocols-lwt" {>= "3.0.0"}
  "tcpip" {>= "3.7.9"}
  "mirage-random"
  "mirage-clock"

  "crowbar" {with-test}
  "alcotest" {with-test}
]
