(executable
 (name miragevpn_client_lwt)
 (public_name miragevpn-client-lwt)
 (package miragevpn)
 (modules miragevpn_client_lwt)
 (libraries
  miragevpn
  lwt
  lwt.unix
  cmdliner
  fmt.tty
  logs
  logs.fmt
  logs.cli
  fmt.cli
  ipaddr
  ipaddr.unix
  ptime.clock.os
  dns-client-lwt
  mirage-crypto-rng-lwt
  mtime.clock.os
  tuntap
  cstruct-lwt))

(executable
 (name miragevpn_client_notun)
 (public_name miragevpn-client-notun)
 (package miragevpn)
 (modules miragevpn_client_notun)
 (libraries
  miragevpn
  lwt
  lwt.unix
  cmdliner
  fmt.tty
  logs
  logs.fmt
  logs.cli
  fmt.cli
  ipaddr
  ipaddr.unix
  ptime.clock.os
  dns-client-lwt
  mirage-crypto-rng-lwt
  mtime.clock.os
  cstruct-lwt
  tcpip
  tcpip.icmpv4
  tcpip.ipv4))

(executable
 (name openvpn_config_parser)
 (public_name openvpn-config-parser)
 (package miragevpn)
 (modules openvpn_config_parser)
 (libraries miragevpn logs logs.fmt fmt.tty))

(executable
 (name key)
 (modules key)
 (public_name miragevpn.key)
 (libraries
  mirage-crypto-rng.unix
  ptime.clock.os
  bos
  miragevpn
  cmdliner
  hxd.core
  hxd.string))
