(library
 (name common)
 (wrapped false)
 (modules common)
 (libraries
  lwt
  lwt.unix
  fmt
  logs
  logs.fmt
  ptime
  fmt.tty
  ptime.clock.os
  cmdliner
  fmt.cli
  logs.cli))

(executable
 (name miragevpn_client_lwt)
 (public_name miragevpn-client-lwt)
 (package miragevpn)
 (modules miragevpn_client_lwt)
 (libraries
  miragevpn
  common
  lwt
  lwt.unix
  cmdliner
  ipaddr
  ipaddr.unix
  dns-client-lwt
  mirage-crypto-rng.unix
  mtime.clock.os
  tuntap))

(executable
 (name miragevpn_client_notun)
 (public_name miragevpn-client-notun)
 (package miragevpn)
 (modules miragevpn_client_notun)
 (libraries
  miragevpn
  common
  lwt
  lwt.unix
  cmdliner
  ipaddr
  ipaddr.unix
  dns-client-lwt
  mirage-crypto-rng.unix
  mtime.clock.os
  tcpip
  tcpip.icmpv4
  tcpip.ipv4))

(executable
 (name openvpn_config_parser)
 (public_name openvpn-config-parser)
 (package miragevpn)
 (modules openvpn_config_parser)
 (libraries miragevpn common logs logs.fmt fmt.tty cmdliner))

(executable
 (name key)
 (modules key)
 (public_name miragevpn.key)
 (libraries
  mirage-crypto-rng.unix
  ptime.clock.os
  bos
  miragevpn
  cmdliner
  hxd.core
  hxd.string))

(executable
 (name miragevpn_server_notun)
 (public_name miragevpn-server-notun)
 (package miragevpn)
 (modules miragevpn_server_notun)
 (libraries
  common
  miragevpn
  lwt
  lwt.unix
  cmdliner
  ipaddr
  ipaddr.unix
  dns-client-lwt
  mirage-crypto-rng.unix
  mtime.clock.os
  tcpip
  tcpip.icmpv4
  tcpip.ipv4))
