(executable
 (name bench_engine)
 (libraries
  bechamel
  bechamel-perf
  bechamel-notty
  notty.unix
  ptime.clock.os
  mtime.clock.os
  mirage-crypto-rng.unix
  logs.fmt
  fmt.tty
  miragevpn
  fmt
  logs
  cstruct
  ptime
  decompress.lzo
  mirage-crypto
  tls
  x509
  duration
  angstrom
  hex
  domain-name
  ipaddr
  gmap
  randomconv
  base64))
