(library
  (name lzo)
  (modules lzo)
  (public_name miragevpn.lzo)
  (libraries fmt logs rresult)
)

(test
  (name tests)
  (modules tests)
  (libraries alcotest crowbar fmt logs.fmt lzo rresult)
)

;(executable;
;  (public_name lzo-fuzzable)
;  (name lzo_fuzzable)
;  (modules lzo_fuzzable)
;  (libraries afl-persistent lzo rresult)
;)
