(library
 (name miragevpn)
 (public_name miragevpn)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  fmt
  logs
  ptime
  decompress.lzo
  mirage-crypto
  mirage-crypto-rng
  tls
  x509
  duration
  angstrom
  ohex
  domain-name
  ipaddr
  gmap
  randomconv
  base64
  digestif
  mirage-mtime
  mirage-ptime)
 (wrapped true))
