(test
  (name test_engine)
  (modules test_engine config_tests)
  (deps 
    sample-configuration-files/minimal-server.cfg 
    sample-configuration-files/ca.public.certificate
    sample-configuration-files/server.secret.key
    sample-configuration-files/server.public.certificate
    sample-configuration-files/client-tcp-certauth-passauth.cfg
    sample-configuration-files/server-tcp-certauth-passauth.cfg
 )
  (libraries alcotest crowbar fmt logs.fmt rresult openvpn)
  (deps (source_tree sample-configuration-files))
)

;(executable
;  (public_name config_afl)
;  (name config_afl)
;  (modules config_afl)
;  (libraries crowbar afl-persistent rresult openvpn)
;)
