(test
 (name config_tests)
 (modules config_tests)
 (libraries alcotest fmt logs.fmt miragevpn)
 (deps
  (source_tree sample-configuration-files)))

(test
 (name crowbar_tests)
 (modules crowbar_tests)
 (libraries alcotest logs.fmt miragevpn crowbar))

;(executable
;  (public_name config_afl)
;  (name config_afl)
;  (modules config_afl)
;  (libraries crowbar afl-persistent miragevpn)
;)
